[package]
name = "throttle2"
version = "0.1.0"
edition = "2021"
description = "Throttle can be used to monitor and limit user activity."
license = "MIT"
keywords = ["throttle"]
repository = "https://github.com/scripturial/throttle"
authors = ["Jay Rhoden <hello@scripturial.com>"]
categories = ["algorithms"]

[dependencies]
